- Fix wrong wxWindowsPrintNativeData initialization (Stefan Ziegler, #23685).
- Fix position of wxStaticBox label after DPI change (Maarten Bent, #23740).
- Fix background colour of empty cells in wxDataViewCtrl (#23708).
- Fix possible (even if rare) crash in printer progress dialog (#23927).
- Fix "+" button not appearing in wxTreeCtrl after adding a child (#23718).

wxOSX:

- Fix missing key events for ⌘+⎇+Letter combinations (#23671).
- Add support for wxDP_DROPDOWN under macOS 10.15.4+ (Lauri Nurmi, #23520).
- Fix initial width of empty wxTextCtrl (#23295).
- Fix underlined fonts sometimes appearing without underline (#23264).
- Respect composition mode when drawing bitmaps (#23240).
- Fix background colour of shaped windows, e.g. wxRichToolTip (#23296).
- Fix memory leak in wxFileDialog using custom controls (#23304).
- Restore setting C-level locale when using wxLocale (#23557).
- Check column for wxEVT_DATAVIEW_ITEM_ACTIVATED (Hartwig Wiesmann, #23636).
- Fix spurious -Wundeclared-selector with Xcode 14 (Hartwig Wiesmann, #23639).
- Recognize macOS 14 Sonoma in wxGetOsDescription() (Tobias Taschner, #23615).
- Fix setting Chinese locales (#23209).
- Wrap wxStaticText contents (#23341).
- Fix invisible wxStaticLine under macOS >= 13 (#23913).

wxUniv:

- Fix resetting the hint in wxTextCtrl when it gets focus (Kvaz1r, #23511).
- Fix creating wxRadioBox without any items (Kvaz1r, #23784).


3.2.2.1: (released 2023-02-13)
------------------------------

This hotfix corrects a regression in 3.2.2 which resulted in not drawing any
icons for the non-root item of wxGenericTreeCtrl in this release (see #23255).


3.2.2: (released 2023-02-08)
----------------------------

All:

- Fix regression in saving TIFF images that could end up truncated (#23048).
- Fix long standing bug in parsing wxHTTP responses.
- Fix wx-config generation in CMake builds (Maarten Bent, #22806).
- Fix compilation of code using wxTransformMatrix with recent gcc (#22790).