@@ -327,6 +327,7 @@ wxMSW:
 - Fix background colour of empty cells in wxDataViewCtrl (#23708).
 - Fix possible (even if rare) crash in printer progress dialog (#23927).
 - Fix "+" button not appearing in wxTreeCtrl after adding a child (#23718).
+- Fix phantom mouse events after dismissing wxFileDialog (charvey2718, #10924).
 
 wxOSX:
 
